update program with class

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,102 +37,102 @@
   </tr> 
   <tr> 
     <td>SRX-A1</td>
-		 {% for n in myList %}
-		<td BGCOLOR="#{{ n }}"></td>
+		 {% for a in myList[0] %}
+		<td BGCOLOR="#{{ a }}"></td>
 		   {% endfor %}
 	</tr>	
     <td>SRX-A2</td>
-		  {% for n in myList %}
-		<td BGCOLOR="#{ n }"></td>
+		  {% for b in myList[1] %}
+		<td BGCOLOR="#{{ b }}"></td>
 		   {% endfor %}
   </tr> 
   <tr> 
     <td>EX-A1</td>
-		 {% for n in myList %}
-		<td BGCOLOR="#{ n }"></td>
+		  {% for c in myList[2] %}
+		<td BGCOLOR="#{{ c }}"></td>
 		   {% endfor %}
   </tr> 
   <tr> 
     <td>EX-A2</td>
-		 {% for n in myList %}
-		<td BGCOLOR="#{ n }"></td>
+		 {% for d in myList[3] %}
+		<td BGCOLOR="#{{ d }}"></td>
 		   {% endfor %}
   </tr> 
   <tr> 
     <td>SRX-A3</td>
-		  {% for n in myList %}
-		<td BGCOLOR="#{ n }"></td>
+		  {% for e in myList[4] %}
+		<td BGCOLOR="#{{ f }}"></td>
 		   {% endfor %}
   </tr> 
   <tr> 
     <td>SRX-A4</td>
-		  {% for n in myList %}
-		<td BGCOLOR="#{ n }"></td>
+		  {% for g in myList[5] %}
+		<td BGCOLOR="#{{ g }}"></td>
 		   {% endfor %}
   </tr> 
   <tr> 
     <td>SRX-B1</td>
-		  {% for n in myList %}
-		<td BGCOLOR="#{ n }"></td>
+		  {% for h in myList[6] %}
+		<td BGCOLOR="#{{ h }}"></td>
 		   {% endfor %}
   </tr> 
   <tr> 
     <td>SRX-B2</td>
-		  {% for n in myList %}
-		<td BGCOLOR="#{ n }"></td>
+		  {% for i in myList[7] %}
+		<td BGCOLOR="#{{ i }}"></td>
 		   {% endfor %}
   </tr>
 	<td>EX-B1</td>
-		  {% for n in myList %}
-		<td BGCOLOR="#{ n }"></td>
+		  {% for j in myList[8] %}
+		<td BGCOLOR="#{{ j }}"></td>
 		   {% endfor %}
 	</tr>
 	<tr>	
     <td>EX-B2</td>
-		  {% for n in myList %}
-		<td BGCOLOR="#{ n }"></td>
+		  {% for k in myList[9] %}
+		<td BGCOLOR="#{{ k }}"></td>
 		   {% endfor %}
   </tr> 
    <tr> 
     <td>SRX-B3</td>
-		  {% for n in myList %}
+		  {% for n in myList[10] %}
 		<td BGCOLOR="#{ n }"></td>
 		   {% endfor %}
   </tr> 
   <tr> 
     <td>SRX-B4</td>
-		  {% for n in myList %}
-		<td BGCOLOR="#{ n }"></td>
+		  {% for l in myList %}
+		<td BGCOLOR="#{ l }"></td>
 		   {% endfor %}
   </tr> 
   <tr> 
     <td>SRX-C1</td>
-		  {% for n in myList %}
-		<td BGCOLOR="#{ n }"></td>
+		  {% for s in myList %}
+		<td BGCOLOR="#{ s }"></td>
 		   {% endfor %}
   </tr> 
   <tr> 
     <td>SRX-C2</td>
-		  {% for n in myList %}
-		<td BGCOLOR="#{ n }"></td>
+		  {% for p in myList %}
+		<td BGCOLOR="#{ p }"></td>
 		   {% endfor %}
   </tr> 
   <tr> 
     <td>EX-C1</td>
-		  {% for n in myList %}
-		<td BGCOLOR="#{ n }"></td>
+		  {% for r in myList %}
+		<td BGCOLOR="#{ r }"></td>
 		   {% endfor %}
   </tr> 
   <tr> 
     <td>EX-C2</td>
-		  {% for n in myList %}
-		<td BGCOLOR="#{ n }"></td>
+		  {% for x in myList %}
+		<td BGCOLOR="#{ x }"></td>
 		   {% endfor %}
   </tr> 
    <tr> 
     <td>SRX-C3</td>
-		  {% for n in myList %}
-		<td BGCOLOR="#{ n }"></td>
+		  {% for w in myList %}
+		<td BGCOLOR="#{ w }"></td>
 		   {% endfor %}
   </tr> 
   <tr> 
